[INFER] Fix bogus assert, bug 658950.